[gd_scene load_steps=17 format=2]

[ext_resource path="res://assetes/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assetes/light.png" type="Texture" id=3]
[ext_resource path="res://assetes/ship_light.png" type="Texture" id=4]
[ext_resource path="res://sounds/shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/death.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/power_up.wav" type="AudioStream" id=7]
[ext_resource path="res://camshake'.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=9]
[ext_resource path="res://fonts/Minecraft.ttf" type="DynamicFontData" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 135.591

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Label:custom_fonts/font:outline_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Label:custom_fonts/font:outline_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[node name="player" type="KinematicBody2D"]
position = Vector2( 508, 297 )
collision_mask = 14
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 1, 0 )
polygon = PoolVector2Array( -1, -8, -8, 6, -8, 8, -7, 8, -1, 2, -1, 2, 5, 8, 6, 8, 6, 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 9 )

[node name="camshake" parent="Camera2D" instance=ExtResource( 8 )]

[node name="bullet_position" type="Position2D" parent="."]
position = Vector2( 0, -9 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -56, -494 )
rotation = 3.92699
texture = ExtResource( 3 )
texture_scale = 4.0
energy = 2.27

[node name="Light2D2" type="Light2D" parent="."]
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="relaod" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="sprite_chooser" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -220, -65 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -191, 91 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( -223, 116 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( -191, 31 )

[node name="Position2D5" type="Position2D" parent="."]
position = Vector2( -224, -117 )

[node name="Position2D6" type="Position2D" parent="."]
position = Vector2( -190, -90 )

[node name="Position2D7" type="Position2D" parent="."]
position = Vector2( -229, -5 )

[node name="Position2D9" type="Position2D" parent="."]
position = Vector2( -228, 51 )

[node name="Position2D10" type="Position2D" parent="."]
position = Vector2( -192, -29 )

[node name="Position_big_astro" type="Position2D" parent="."]
position = Vector2( 190, -90 )

[node name="Position_big_astro2" type="Position2D" parent="."]
position = Vector2( 192, 111 )

[node name="Position_big_astro3" type="Position2D" parent="."]
position = Vector2( 228, 63 )

[node name="Position_big_astro4" type="Position2D" parent="."]
position = Vector2( 227, -66 )

[node name="Position_big_astro5" type="Position2D" parent="."]
position = Vector2( 228, 127 )

[node name="Position_big_astro6" type="Position2D" parent="."]
position = Vector2( 188, -25 )

[node name="Position_big_astro7" type="Position2D" parent="."]
position = Vector2( 227, -1 )

[node name="Position_big_astro8" type="Position2D" parent="."]
position = Vector2( 225, -127 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Position_enemy" type="Position2D" parent="."]
position = Vector2( -164, 127 )

[node name="Position_enemy2" type="Position2D" parent="."]
position = Vector2( -164, -127 )

[node name="Position_enemy3" type="Position2D" parent="."]
position = Vector2( 188, 31 )

[node name="Position_enemy4" type="Position2D" parent="."]
position = Vector2( 142, -127 )

[node name="enemy_sp" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="health" type="Label" parent="CanvasLayer"]
margin_left = 445.0
margin_top = 563.0
margin_right = 654.0
margin_bottom = 614.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Health = "

[node name="score" type="Label" parent="CanvasLayer"]
margin_left = 399.0
margin_top = 6.0
margin_right = 596.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "score = "

[node name="Ammo" type="Label" parent="CanvasLayer"]
margin_left = 445.0
margin_top = 529.0
margin_right = 658.0
margin_bottom = 580.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Ammo = "

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 259.0
margin_top = 481.0
margin_right = 720.0
margin_bottom = 532.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Someone is coming"

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 344.0
margin_top = 481.0
margin_right = 705.0
margin_bottom = 532.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Space worm "
align = 1
valign = 1

[node name="shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="power_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Position2D8" type="Position2D" parent="."]
position = Vector2( 67, 63 )

[node name="Timer3" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="sprite_chooser" to="." method="_on_sprite_chooser_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="enemy_sp" to="." method="_on_enemy_sp_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
